rebrand scope to athenea
